<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="99dp"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        android:maxLength="160" />
    
    <TextView
        android:id="@+id/charLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/characterLimit" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSend" />
	
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textAppearance="?android:attr/textAppearanceLarge"/>
	
    <TextView 
        android:layout_width="fill_parent"
		android:layout_height="2dip"
		android:background="#00bfff" />
    
	<ListView
	    android:id="@android:id/list"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:choiceMode="multipleChoice" >
	    <!-- Preview: listitem=@android:layout/simple_list_item_checked -->

    </ListView>

</LinearLayout>